# bucket-antivirus-function

./: .coveragerc  .editorconfig  .envrc  .envrc.local.template  .flake8  .gitignore  .markdownlintrc  .pre-commit-config.yaml  .sam-env.template  .whitesource  Dockerfile  Dockerfile.aarch64  Jenkinsfile  Makefile  README.md  \  build.yml  build_lambda.sh  check_mime.py  check_pdf.py  clamav.py  clamav_test.py  common.py  common_test.py  display_infected.py  display_infected_test.py  fangfrisch.conf  metrics.py  peepdf_wrapper.py  peepdf_wrapper_test.py  publish.py  publish_test.py  pyproject.toml  requirements-cli.txt  requirements-dev.txt  requirements.txt  scan.py  scan_bucket.py  scan_bucket_test.py  scan_test.py  (+12 more)
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: build-test-deploy.yml  deploy_lambda.yml  validate.yml
deploy/: cloudformation.yaml
deploy/terraform/: iam.tf  lambda.tf  main.tf  s3.tf  sns.tf  variables.tf
infrastructure/cleardata/: terragrunt.hcl
infrastructure/cleardata/prod/: env.yaml
infrastructure/cleardata/prod/s3-clamscan/: terragrunt.hcl
infrastructure/cleardata/staging/: env.yaml
infrastructure/cleardata/staging/s3-clamscan/: .terraform.lock.hcl  terragrunt.hcl
infrastructure/direct/: terragrunt.hcl
infrastructure/direct/dev/: env.yaml  region.yaml
infrastructure/direct/dev/s3-clamscan/: .terraform.lock.hcl  README.md  terragrunt.hcl
infrastructure/modules/s3-clamscan/: builds-s3.tf  definitions-s3.tf  main.tf  publisher.tf  scanner.tf  sqs.tf  terraform.tf  updater.tf  variables.tf
scripts/: build_and_deploy_lambda.sh  run-scan-lambda  run-update-lambda
terraform/example/: Makefile  main.tf  variables.tf
test/: macro.docm  macro.docx
