[tool.poetry]
name = "bucket-antivirus-function"
version = "0.1.0"
description = ""
authors = ["ralren <ren@truss.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
certifi = "2018.11.29"
chardet = "3.0.4"
datadog = "0.26.0"
decorator = "4.3"
idna = "2.8"
requests = "2.21"
simplejson = "3.16"
urllib3 = "1.24.2"
pytz = "2019.3"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
coverage = "^7.2.5"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
