[tool.poetry]
name = "bucket-antivirus-function"
version = "0.1.0"
description = ""
authors = ["ralren <ren@truss.works>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
certifi = "^2022.12.7"
chardet = "^5.1.0"
datadog = "^0.45.0"
decorator = "^5.1.1"
idna = "^3.4"
requests = "^2.30.0"
simplejson = "^3.19.1"
urllib3 = "^2.0.2"
pytz = "^2023.3"

[tool.poetry.group.dev.dependencies]
mock = "^5.0.2"
coverage = "^7.2.5"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
